1) Modify nfinx config for passing real ip of user through headers
